build(intellij): 更新 Intellij IDEA 依赖版本
- 将 Intellij IDEA 版本从 2023.1 升级到 2024.1
- 更新 sinceBuild 版本号从 231 到 241